# Whispen

./: ERREUR_PYDANTIC.md  INSTALLATION.md  MESSAGE_OLIVIER.md  README.md  start-uv.ps1  start.bat  start.ps1  start.sh
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: __init__.py  summary.py  transcription.py
backend/app/services/: azure_service.py
backend/app/utils/: file_handler.py
backend/tests/: conftest.py  test_api.py  test_azure_service.py  test_file_handler.py
docs/: ARCHITECTURE.md  COMPARATIF_LOCAL_VS_CLOUD.md  PRESENTATION_GUIDE.md  RGPD_COMPLIANCE.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: AudioUploader.jsx  TranscriptionResult.jsx
frontend/src/services/: api.js
